Fixes z-index issue with remind button on mobile devices #4124

--- a/src/app/modules/newsfeed/activity/remind-button/remind-button.component.ng.scss
+++ b/src/app/modules/newsfeed/activity/remind-button/remind-button.component.ng.scss
@@ -1,6 +1,10 @@
 @import 'defaults.scss';
 
 :host {
+  .m-dropdown--v2 {
+    z-index: 1;
+  }
+
   .m-activityRemindButton__icon {
     padding: 0;
     border: 0;
